--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -5,7 +5,7 @@ build:
 cards:
   message: "Welcome to EazyBank cards related production runtime refresh APIs "
   contactDetails:
-    name: "Sandra Harald - Product Owner Actuator refresh added"
+    name: "Sandra Harald - Product Owner RabbitMQ refresh added"
     email: "sandra@eazybank.com"
   onCallSupport:
     - (617) 432-2356
