--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -4,7 +4,7 @@ build:
 loans:
   message: "Welcome to EazyBank loans related  production runtime refresh APIs "
   contactDetails:
-    name: "Pelias Sudhir - Product Owner"
+    name: "Pelias Sudhir - RabbitMQ Owner"
     email: "pelias@eazybank.com"
   onCallSupport:
     - (723) 656-8709
